# ChangeLog for dev-db/postgresql
# Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.313 2006/12/18 02:59:41 weeve Exp $

  18 Dec 2006; Jason Wever <weeve@gentoo.org> postgresql-7.3.16.ebuild:
  Stable on SPARC wrt security bug #152783.

  17 Dec 2006; René Nussbaumer <killerfox@gentoo.org>
  postgresql-7.3.16.ebuild, postgresql-7.4.14.ebuild,
  postgresql-8.0.9-r1.ebuild:
  Stable on hppa. See bug #152783.

  17 Dec 2006; Konstantin V. Arkhipov <voxus@gentoo.org>
  postgresql-7.3.16.ebuild, postgresql-7.4.14.ebuild,
  postgresql-8.0.9-r1.ebuild:
  Stable on amd64 wrt security bug #152783.

  17 Dec 2006; Bryan Østergaard <kloeri@gentoo.org>
  postgresql-7.3.16.ebuild, postgresql-7.4.14.ebuild,
  postgresql-8.0.9-r1.ebuild:
  Stable on Alpha + ia64, bug 152783.

  17 Dec 2006; Jason Wever <weeve@gentoo.org> postgresql-7.4.14.ebuild,
  postgresql-8.0.9-r1.ebuild:
  Stable on SPARC wrt security bug #152783.

  17 Dec 2006; Tiziano Müller <dev-zero@gentoo.org>
  postgresql-7.4.14.ebuild, -postgresql-8.0.9.ebuild,
  postgresql-8.0.9-r1.ebuild, -postgresql-8.1.5.ebuild:
  Dropped old versions. Added note for people having the pg-hier USE-flag set.

  17 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>
  postgresql-7.3.16.ebuild, postgresql-7.4.14.ebuild,
  postgresql-8.0.9-r1.ebuild:
  Stable on ppc wrt bug #152783.

  14 Dec 2006; Markus Rothe <corsair@gentoo.org> ChangeLog:
  got disconnected from internet while commiting - fixing digest

  14 Dec 2006; Markus Rothe <corsair@gentoo.org> postgresql-7.4.14.ebuild,
  postgresql-8.0.9-r1.ebuild:
  Stable on ppc64; bug #152783

  14 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  postgresql-8.0.9-r1.ebuild:
  stable x86, security bug #152783

  14 Dec 2006; Christian Faulhammer <opfer@gentoo.org>
  postgresql-7.4.14.ebuild:
  stable x86, security bug #152783

  14 Dec 2006; Christian Faulhammer <opfer@gentoo.org>