@@ -161,26 +161,26 @@ EBUILD postgresql-7.4.13.ebuild 10706 RMD160 b0d2ff978b1e4c1cadbd2e79c3229688bd1
 MD5 c970674fff433171fc0e2231e3be1035 postgresql-7.4.13.ebuild 10706
 RMD160 b0d2ff978b1e4c1cadbd2e79c3229688bd1111e5 postgresql-7.4.13.ebuild 10706
 SHA256 aaf22899f43a413ba55c771d6ca542986c64b0d21c3c41ac7301708156745240 postgresql-7.4.13.ebuild 10706
-EBUILD postgresql-7.4.14.ebuild 8840 RMD160 741489603be7a6b6ed378ed63c4148f34b277ccb SHA1 dcbe5b8fc3426e27ca35a6fd6676fdee4c1007e8 SHA256 cc5e7ffd24552e7c5f3b6e8c4ea5200626cddaa9f040206fc482674ceeb3dda9
-MD5 0e4bf9a890ff6cf442f5346ea3661bad postgresql-7.4.14.ebuild 8840
-RMD160 741489603be7a6b6ed378ed63c4148f34b277ccb postgresql-7.4.14.ebuild 8840
-SHA256 cc5e7ffd24552e7c5f3b6e8c4ea5200626cddaa9f040206fc482674ceeb3dda9 postgresql-7.4.14.ebuild 8840
+EBUILD postgresql-7.4.14.ebuild 8329 RMD160 03378b58547554d427ec5a7f046dafa42d9cca64 SHA1 9eb2800e5e9ce6cf6e239191ad838b590d75728b SHA256 bd18e71360107d2f66800a9ab02d83f2e419f044dbbb0719aff9e9de19c20a1a
+MD5 0eef8c3f21e9feca6930aa2130ef5dc4 postgresql-7.4.14.ebuild 8329
+RMD160 03378b58547554d427ec5a7f046dafa42d9cca64 postgresql-7.4.14.ebuild 8329
+SHA256 bd18e71360107d2f66800a9ab02d83f2e419f044dbbb0719aff9e9de19c20a1a postgresql-7.4.14.ebuild 8329
 EBUILD postgresql-8.0.8.ebuild 7671 RMD160 d820ff2188af6bb6d90ce81e59434187dc4a51f9 SHA1 3567eafb1099f3bd8894881e9c73ad945465aa03 SHA256 6e953e8ce3b6e057022fc2c08569f221dde779c595562b9597ffed2fdf310591
 MD5 e5593b676c330eb0f88e49a7a363e5d0 postgresql-8.0.8.ebuild 7671
 RMD160 d820ff2188af6bb6d90ce81e59434187dc4a51f9 postgresql-8.0.8.ebuild 7671
 SHA256 6e953e8ce3b6e057022fc2c08569f221dde779c595562b9597ffed2fdf310591 postgresql-8.0.8.ebuild 7671
-EBUILD postgresql-8.0.9-r1.ebuild 8819 RMD160 0b8502640d1dd05362eb58dc60c307bedaa8dace SHA1 3e4c2e697eea6883e90024a033035761fbc51a7f SHA256 c2110793476669df769c27b850099356e7702b1936e9d449d3503ad03dba43a2
-MD5 d2c7a28ecf1bc29f8d138568f8b53d3a postgresql-8.0.9-r1.ebuild 8819
-RMD160 0b8502640d1dd05362eb58dc60c307bedaa8dace postgresql-8.0.9-r1.ebuild 8819
-SHA256 c2110793476669df769c27b850099356e7702b1936e9d449d3503ad03dba43a2 postgresql-8.0.9-r1.ebuild 8819
+EBUILD postgresql-8.0.9-r1.ebuild 8309 RMD160 69ac409f210f1ef6b4da6b462c02301a073c8e44 SHA1 a83255c78b51afb3107f75b9ec87dbda5c51a12f SHA256 4d1fbd3573e7038325d39388aef46814a4a8abb3e121ad7191213c834704a7de
+MD5 301cc55d3bf1dcc070e57be0769f2994 postgresql-8.0.9-r1.ebuild 8309
+RMD160 69ac409f210f1ef6b4da6b462c02301a073c8e44 postgresql-8.0.9-r1.ebuild 8309
+SHA256 4d1fbd3573e7038325d39388aef46814a4a8abb3e121ad7191213c834704a7de postgresql-8.0.9-r1.ebuild 8309
 EBUILD postgresql-8.1.5-r1.ebuild 8497 RMD160 aec3c8a4220aba7ebe8c1e7defb136a83202df5a SHA1 37815c785fece4cee463e458f8b568179f393239 SHA256 ebb92b2ab9d435033a33b1695f164cca7055dea17c463dd8c834a9f4c2a57a0a
 MD5 ca1c9142e329325d94a0c8a168f67b50 postgresql-8.1.5-r1.ebuild 8497
 RMD160 aec3c8a4220aba7ebe8c1e7defb136a83202df5a postgresql-8.1.5-r1.ebuild 8497
 SHA256 ebb92b2ab9d435033a33b1695f164cca7055dea17c463dd8c834a9f4c2a57a0a postgresql-8.1.5-r1.ebuild 8497
-MISC ChangeLog 66791 RMD160 6281c408404d4cd797b93a26f9769c595c1c3d55 SHA1 92668dbbf32e9491736f2e2046748caed476fbed SHA256 7b8c4577c487831e20a2975ddf7837c0077e1af0594aed65de4bfad9b66869aa
-MD5 f897bd3bd55c5673e674b941e168339b ChangeLog 66791
-RMD160 6281c408404d4cd797b93a26f9769c595c1c3d55 ChangeLog 66791
-SHA256 7b8c4577c487831e20a2975ddf7837c0077e1af0594aed65de4bfad9b66869aa ChangeLog 66791
+MISC ChangeLog 66949 RMD160 21d968385b05fe4a631965bfd079e3880abf641b SHA1 7e285745b2a41eb29e0e52b971cbe17794dd4829 SHA256 7fa3ebc22df471361bf64d4e67020b8d1ccc856f4ba598d5d7e00987019814de
+MD5 40d9edcc5586a23a797d3fb3e9a43215 ChangeLog 66949
+RMD160 21d968385b05fe4a631965bfd079e3880abf641b ChangeLog 66949
+SHA256 7fa3ebc22df471361bf64d4e67020b8d1ccc856f4ba598d5d7e00987019814de ChangeLog 66949
 MISC metadata.xml 164 RMD160 becfe652663bd65719dd11fa6ffb588b3d5b4ecc SHA1 f67b7ac1c5e6e65ef5a19a589d4759c84918f86c SHA256 7e8e8126bc8701c4a42c7dfed8bb755ac6040fe3d0e3f994d888f8b2b4fa7d8b
 MD5 6fe52df942ef15801d56449cd8299604 metadata.xml 164
 RMD160 becfe652663bd65719dd11fa6ffb588b3d5b4ecc metadata.xml 164
