@@ -1,6 +1,10 @@
 # ChangeLog for dev-db/postgresql
 # Copyright 2002-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.313 2006/12/18 02:59:41 weeve Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/postgresql/ChangeLog,v 1.314 2006/12/18 14:34:40 dev-zero Exp $
+
+  18 Dec 2006; Tiziano Müller <dev-zero@gentoo.org>
+  postgresql-7.4.14.ebuild, postgresql-8.0.9-r1.ebuild:
+  Removed broken pg-hier USE-flag detection.
 
   18 Dec 2006; Jason Wever <weeve@gentoo.org> postgresql-7.3.16.ebuild:
   Stable on SPARC wrt security bug #152783.
